[project]
name = "meeps"
version = "0.2.0"
description = "Advanced League of Legends esports analytics library with player performance statistics, contract tracking, and comprehensive tournament data"
authors = [
    {name = "Thomas Barrepitous", email = "barrepitousthomas@gmail.com"},
    {name = "Tolki", email = "gary.mialaret@gmail.com"},
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = [
    "leaguepedia",
    "league-of-legends",
    "esports",
    "analytics",
    "performance-statistics",
    "player-data",
    "gaming",
    "riot-games",
    "tournaments",
    "contracts",
    "kda",
    "fantasy-sports",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/thomasbarrepitous/meeps"
Repository = "https://github.com/thomasbarrepitous/meeps"
Documentation = "https://github.com/thomasbarrepitous/meeps#readme"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
mwclient = "^0.10.1"
lol-dto = "^2.0.0"
lol-id-tools = "^2.0.0"
mwrogue = "^0.1.0"
rapidfuzz = "<3.0"
requests-cache = {version = "^1.0.0", optional = true}

[tool.poetry.extras]
cache = ["requests-cache"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"
requests-cache = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
